--- a/Redaction/Beamer/TweetEmbedding_slides.tex
+++ b/Redaction/Beamer/TweetEmbedding_slides.tex
@@ -192,7 +192,7 @@ Exemple $w=2$:
 \begin{quote}
 \LARGE \textbf{``}\normalsize \emph{Espérons que la présentation sous Teams se passe bien} \LARGE \textbf{''}\normalsize
 \end{quote}
-Voisins(\texttt{passe}) =  \texttt{{[}Teams,\ se,\ bien{]}} 
+Voisins(\texttt{passe}) =  \texttt{[Teams,\ se,\ bien]} 
 }
 \end{column}
 \begin{column}{0.4\textwidth} 
@@ -326,7 +326,7 @@ Pour chaque couple \texttt{{[}focus,\ contexte{]}} :
   \begin{cases}
   \mathbb P(D=1\vert w_{focus},w_{contexte})&=\sigma(W_{e,w_{focus}}{}^tW_{s,w_{contexte}})  \\
   \mathbb P(D=0\vert w_{focus},w_{neg,\,i})&=\sigma(-W_{e,w_{focus}}{}^tW_{s,w_{neg,\,i}}) 
-  \\\sigma(x)=\frac{1}{1+\exp(-x)}
+  \\\sigma(x)=\frac{1}{1+\exp()}
   \end{cases}
   \] \bcsmbh Complexité : \(\mathcal O (K)\)
 \end{enumerate}
