--- a/Redaction/Beamer/TweetEmbedding_slides.tex
+++ b/Redaction/Beamer/TweetEmbedding_slides.tex
@@ -98,7 +98,7 @@
 \usepackage{tikz}
 \usetikzlibrary{fit,arrows.meta}
 \usepackage{pifont}
-\usepackage{enumitem}
+\usepackage[shortlabels]{enumitem}
 \usepackage{dsfont}
 \setlist[itemize,1]{label = --}
 \setlist[itemize,2]{label = $\circ$}
@@ -120,7 +120,7 @@
 \rel{}
 \division{11/06/2020}
 
-\departement{Ensae --- 2019-2020}
+\departement{Ensae — 2019-2020}
 \makeatletter
 \let\@@magyar@captionfix\relax
 \makeatother
@@ -135,22 +135,8 @@
 \titlepage
 \end{frame}
 
-\begin{frame}{Introduction}
-\protect\hypertarget{introduction}{}
-
-\resizebox{\textwidth}{!}{\input{img/schema_recap.tex}}
-
-\end{frame}
-
-\hypertarget{word2vec}{%
-\section{\texorpdfstring{\emph{word2vec}}{word2vec}}\label{word2vec}}
-
-\hypertarget{le-moduxe8le-word2vec-un-moduxe8le-de-word-embedding}{%
-\subsection{\texorpdfstring{Le modèle \emph{word2vec}, un modèle de
-\emph{word-embedding}}{Le modèle word2vec, un modèle de word-embedding}}\label{le-moduxe8le-word2vec-un-moduxe8le-de-word-embedding}}
-
-\begin{frame}{\emph{word2vec} et \emph{word-embedding} \bcquestion}
-\protect\hypertarget{word2vec-et-word-embedding}{}
+\begin{frame}{Introduction (1/2)}
+\protect\hypertarget{introduction-12}{}
 
 \begin{itemize}
 \item
@@ -175,14 +161,27 @@
 
 \end{frame}
 
-\begin{frame}{L'approche Skip-gram}
-\protect\hypertarget{lapproche-skip-gram}{}
+\begin{frame}{Introduction (2/2)}
+\protect\hypertarget{introduction-22}{}
+
+\resizebox{\textwidth}{!}{\input{img/schema_recap.tex}}
+
+\end{frame}
+
+\hypertarget{word2vec}{%
+\section{\texorpdfstring{\emph{word2vec}}{word2vec}}\label{word2vec}}
+
+\hypertarget{lapproche-skip-gram}{%
+\subsection{L’approche Skip-gram}\label{lapproche-skip-gram}}
+
+\begin{frame}{L’approche Skip-gram}
+\protect\hypertarget{lapproche-skip-gram-1}{}
 
 \begin{columns}
 \begin{column}{0.6\textwidth}
 Approche retenue : Skip-gram
 \begin{itemize}
-\item étant donné un mot \emph{focus} quelles pourraient être ses voisins (\emph{contextes}) ?
+\item étant donné un mot \emph{focus} quels pourraient être ses voisins (\emph{contextes}) ?
 \item les \emph{contextes} dépendent d'un paramètre : la \highlight{fenêtre} $w$
 \end{itemize}
 \medskip
@@ -206,10 +205,11 @@ Approche CBOW (non retenue) : objectif inverse}
 
 \end{frame}
 
-\hypertarget{lalgorithme-skip-gram}{%
-\subsection{L'algorithme Skip-gram}\label{lalgorithme-skip-gram}}
+\hypertarget{construction-de-la-base-dentrauxeenement}{%
+\subsection{Construction de la base
+d’entraînement}\label{construction-de-la-base-dentrauxeenement}}
 
-\begin{frame}[fragile]{Construction de la base d'entraînement (1/2)}
+\begin{frame}[fragile]{Construction de la base d’entraînement (1/2)}
 \protect\hypertarget{construction-de-la-base-dentrauxeenement-12}{}
 
 \bcoutil À partir de couples \texttt{{[}focus,\ contexte{]}}, on met
@@ -231,15 +231,14 @@ vectorielle finale : \[
 \item
   effectue un sous-échantillonnage des mots (\highlight{subsampling})
 \item
-  on tire au hasard un mot \emph{focus} et un mot \emph{contexte}
-  associé
+  tire au hasard un mot \emph{focus} et un mot \emph{contexte} associé
 \end{itemize}
 
 \faArrowCircleRight{} on parcourt la base \highlight{epochs} fois
 
 \end{frame}
 
-\begin{frame}[fragile]{Construction de la base d'entraînement (2/2)}
+\begin{frame}[fragile]{Construction de la base d’entraînement (2/2)}
 \protect\hypertarget{construction-de-la-base-dentrauxeenement-22}{}
 
 Exemple avec \(w=2\):
@@ -250,12 +249,13 @@ Exemple avec \(w=2\):
 
 \begin{itemize}
 \item
-  supprime la ponctuation, met tout en minuscule\\
+  on supprime la ponctuation, met tout en minuscule\\
   \faArrowCircleRight{}
   \texttt{{[}espérons,\ que,\ la,\ présentation,\ sous,\ teams,\ se,\ passe,\ bien{]}}
   \pause
 \item
-  effectue un sous-échantillonnage des mots (\highlight{subsampling})\\
+  on effectue un sous-échantillonnage des mots
+  (\highlight{subsampling})\\
   \faArrowCircleRight{}
   \texttt{{[}espérons,\ X,\ X,\ présentation,\ X,\ teams,\ se,\ passe,\ X{]}}
   \pause
@@ -269,6 +269,10 @@ Exemple avec \(w=2\):
 \end{itemize}
 
 \end{frame}
+
+\hypertarget{softmax-et-negative-sampling}{%
+\subsection{\texorpdfstring{\emph{softmax} et \emph{negative
+sampling}}{softmax et negative sampling}}\label{softmax-et-negative-sampling}}
 
 \begin{frame}[fragile]{Actualisation de \(W_e\) et \(W_s\)}
 \protect\hypertarget{actualisation-de-w_e-et-w_s}{}
@@ -284,6 +288,7 @@ fonction de perte
 Deux approches :
 
 \begin{enumerate}
+[1.]
 \tightlist
 \item
   \emph{softmax} : pour un mot \texttt{focus} on estime la probabilité
@@ -302,11 +307,12 @@ Deux approches :
 \end{frame}
 
 \begin{frame}[fragile]{\emph{softmax} et \emph{negative sampling}}
-\protect\hypertarget{softmax-et-negative-sampling}{}
+\protect\hypertarget{softmax-et-negative-sampling-1}{}
 
 Pour chaque couple \texttt{{[}focus,\ contexte{]}} :
 
 \begin{enumerate}
+[1.]
 \item
   \emph{softmax} : on maximise \[
   \mathbb P(w_{contexte}\vert w_{focus}) = 
@@ -318,7 +324,7 @@ Pour chaque couple \texttt{{[}focus,\ contexte{]}} :
   \] \bcsmmh Complexité : \(\mathcal O (n)\) et \(n\simeq\) 70 000
   \pause
 \item
-  \emph{negative sampling} : on tire \(K=5\) mots ``négatifs''
+  \emph{negative sampling} : on tire \(K=5\) mots “négatifs”
   \((w_{neg,\,i})_{i=1..K}\) a priori non liés à
   \texttt{{[}focus,\ contexte{]}}\\
   On maximise \(\mathbb P(D=1\vert w_{focus},w_{contexte})\) et
@@ -355,7 +361,7 @@ qualité et de leurs proximités ?
 \item
   \textbf{Jugement humain} : corrélations entre les proximités de nos
   vecteurs-mots et une base de proximités de mots construites par le
-  jugement d'individus
+  jugement d’individus
 \end{itemize}
 
 \end{frame}
@@ -435,16 +441,16 @@ hyperparamètres}\label{choix-des-meilleurs-hyperparamuxe8tres}}
 \begin{itemize}
 \tightlist
 \item
-  \emph{Word2vec} se base sur différents choix d'hyperparamètres :
+  \emph{Word2vec} se base sur différents choix d’hyperparamètres :
 
   \begin{itemize}
   \tightlist
   \item
     taille de la fenêtre (\emph{w})
   \item
-    nombre d'epochs (\emph{ep})
+    nombre d’epochs (\emph{ep})
   \item
-    taux d'apprentissage (\emph{lr})
+    taux d’apprentissage (\emph{lr})
   \item
     dimension des \emph{word-embeddings} (\emph{dim})
   \end{itemize}
@@ -474,7 +480,7 @@ validation avec notre implémentation.
 
 \end{frame}
 
-\begin{frame}{Exemple : epochs, fenêtre et taux d'apprentissage}
+\begin{frame}{Exemple : epochs, fenêtre et taux d’apprentissage}
 \protect\hypertarget{exemple-epochs-fenuxeatre-et-taux-dapprentissage}{}
 
 \begin{figure}[htp]
@@ -662,10 +668,10 @@ hey (0,47) & princesse (0,64) & 34 (0,53) & 20h (0,54) \tabularnewline
 \section{Indice de sentiments}\label{indice-de-sentiments}}
 
 \hypertarget{pruxe9dire-le-sentiment-dun-tweet}{%
-\subsection{Prédire le sentiment d'un
+\subsection{Prédire le sentiment d’un
 tweet}\label{pruxe9dire-le-sentiment-dun-tweet}}
 
-\begin{frame}{Prédire le sentiment d'un tweet}
+\begin{frame}{Prédire le sentiment d’un tweet}
 \protect\hypertarget{pruxe9dire-le-sentiment-dun-tweet-1}{}
 
 \begin{itemize}
@@ -676,9 +682,9 @@ tweet}\label{pruxe9dire-le-sentiment-dun-tweet}}
   \begin{itemize}
   \tightlist
   \item
-    1 s'il est positif
+    1 s’il est positif
   \item
-    0 s'il est négatif.
+    0 s’il est négatif.
   \end{itemize}
 \end{itemize}
 
@@ -692,7 +698,7 @@ tweet}\label{pruxe9dire-le-sentiment-dun-tweet}}
   \begin{itemize}
   \tightlist
   \item
-    \textbf{base d'entraînement} : 16 000 tweets
+    \textbf{base d’entraînement} : 16 000 tweets
   \item
     \textbf{base de test} : 7 000 tweets
   \end{itemize}
@@ -708,11 +714,11 @@ tweet}\label{pruxe9dire-le-sentiment-dun-tweet}}
   \begin{itemize}
   \tightlist
   \item
-    \textbf{Modèle lexical} : utiliser l'information des tweets
+    \textbf{Modèle lexical} : utiliser l’information des tweets
     labelisés pour construire un sentiment moyen par mot.
   \item
     \textbf{Modèle logit} : utiliser les \emph{word-embeddings} comme
-    prédicteurs d'une régression logistique.
+    prédicteurs d’une régression logistique.
   \end{itemize}
 \end{itemize}
 
@@ -721,7 +727,7 @@ tweet}\label{pruxe9dire-le-sentiment-dun-tweet}}
 \begin{frame}{Modèle lexical : sentiment moyen des mots}
 \protect\hypertarget{moduxe8le-lexical-sentiment-moyen-des-mots}{}
 
-Le sentiment prédit d'un tweet \(t\) composé de \(n\) mots sera :
+Le sentiment prédit d’un tweet \(t\) composé de \(n\) mots sera :
 \[S_{1,\gamma}(t) = \mathds{1}\left\{ \frac{1}{n} \sum \limits_{i=1}^n \alpha_i \geq \gamma\right\}  \qquad \in \{ 0,1 \}\]
 
 \begin{itemize}
@@ -739,7 +745,7 @@ Le sentiment prédit d'un tweet \(t\) composé de \(n\) mots sera :
 \emph{word-embeddings}}
 \protect\hypertarget{moduxe8le-logit-pruxe9diction-gruxe2ce-aux-word-embeddings}{}
 
-Le sentiment prédit d'un tweet \(t\) sera :
+Le sentiment prédit d’un tweet \(t\) sera :
 \[S_{2,\gamma}(t) =\mathds{1}\left\{   \mathbb{P}(Y_i = 1 | X_{i}) \ge \gamma\right\} \qquad \quad \in \{ 0,1 \}\]
 Avec :
 \[Y_i = \mathds{1}\left\{ \sum_{i = 1}^n \beta_i X_{i,j} + \varepsilon_i \geq 0 \right\} \quad  \mathbb{P}(Y_i = 1 | X_{i}) = F_{\varepsilon}\left(\sum_{i = 1}^n \beta_i X_{i,j}\right)\]
@@ -784,6 +790,7 @@ Plusieurs points à traiter :
 \dots
 
 \begin{enumerate}
+[1.]
 \tightlist
 \item
   Davantage de mots inconnus dans le modèle logit (36,2 \% du
@@ -793,16 +800,18 @@ Plusieurs points à traiter :
 \pause
 
 \begin{enumerate}
+[1.]
 \setcounter{enumi}{1}
 \tightlist
 \item
-  Le processus d'annotation utilisé pour les tweets sur les transports
+  Le processus d’annotation utilisé pour les tweets sur les transports
   urbains reproduit en partie par le modèle lexical ( ? )
 \end{enumerate}
 
 \pause
 
 \begin{enumerate}
+[1.]
 \setcounter{enumi}{2}
 \tightlist
 \item
@@ -813,7 +822,7 @@ Plusieurs points à traiter :
 
 \bigskip
 
-\faArrowCircleRight{} Utilisation d'une nouvelle base de test pour
+\faArrowCircleRight{} Utilisation d’une nouvelle base de test pour
 neutraliser certains de ces effets
 
 \textbf{Modèle logit \underline{alors} meilleur que le modèle
@@ -835,13 +844,13 @@ ménages}\label{sentiments-des-tweets-et-enquuxeate-de-conjoncture-aupruxe8s-des
 \begin{column}{0.5\textwidth} \bcsmmh
 \begin{itemize}
 \item Indicateurs relativement éloignés de l'enquête Camme
-\item Similarité avec indicateur Camme plus proche avec modèle lexical que modèle word-embedding (DTW)
+\item Similarité (DTW) avec indicateur Camme plus proche avec modèle lexical que modèle word-embedding 
 \end{itemize}
 
 \end{column}\pause
 \begin{column}{0.5\textwidth} \bcsmbh
 \begin{itemize}
-\item Modèle word-embedding utile pour prévoir indicateur Camme (Granger causalité) $\ne$ modèle lexical
+\item Modèle word-embedding utile pour prévoir indicateur Camme (causalité de Granger) $\ne$ modèle lexical
 \item Modèle indicateur \textbf{avancé} des sentiments des ménages
 \end{itemize}
 
@@ -895,9 +904,9 @@ ménages}\label{sentiments-des-tweets-et-enquuxeate-de-conjoncture-aupruxe8s-des
     \footnotesize (sujets spécifiques de Camme VS positivité ou non des
     tweets pour notre indice) \normalsize \dots
   \item
-    \dots{} mais aussi à cause des \textbf{limites de la base
-    d'entraînement} de tweets annotés \footnotesize (domain-shift,
-    processus d'annotation, mots inconnus) \normalsize
+    \dots\{\} mais aussi à cause des \textbf{limites de la base
+    d’entraînement} de tweets annotés \footnotesize (domain-shift,
+    processus d’annotation, mots inconnus) \normalsize
   \end{itemize}
 \end{itemize}
 
@@ -906,20 +915,20 @@ ménages}\label{sentiments-des-tweets-et-enquuxeate-de-conjoncture-aupruxe8s-des
 \begin{frame}{Conclusion (2/2)}
 \protect\hypertarget{conclusion-22}{}
 
-Pistes d'amélioration~?
+Pistes d’amélioration~?
 
 \begin{itemize}
 \item
-  disposer d'une \textbf{base de tweets traitant de sujets divers, et
+  disposer d’une \textbf{base de tweets traitant de sujets divers, et
   bien annotés} \footnotesize (gradation de sentiments, modèles de type
   BERT, analyse approfondie du contenu et des auteurs des tweets \dots)
   \normalsize
 \item
   améliorer le \textbf{prétraitement des tweets}
-  \footnotesize (orthographe des mots, modèle à séquences d'unités de
+  \footnotesize (orthographe des mots, modèle à séquences d’unités de
   sous-mots type \emph{fasttext} \dots)\normalsize
 \item
-  utiliser des \textbf{modèles d'analyse de sentiment plus élaborés}
+  utiliser des \textbf{modèles d’analyse de sentiment plus élaborés}
   \footnotesize  (type réseaux de neurones récurrents)\normalsize
 \end{itemize}
 
